# blog

./: .gitignore  404.html  README.md  about.html  about.md  blog.cabal  build.sh  giscus.json  ideas.md  index.md  package.json  site.hs  stack.yaml  tsconfig.json
_site/: 404.html  404.md  about.html  drafts.html  index.html  posts.html  tags.html
_site/css/: default.css  md.css  mermaid.css  theme.css
_site/drafts/: 1970-01-01-test.html
_site/posts/: 1970-01-01-test.html  2022-02-03-day-0.html  2022-02-04-build-a-blog-with-hakyll.html
_site/tags/: meta.html  tag1.html  tag2.html
css/: default.css  md.css  mermaid.css  theme.css
drafts/: 1970-01-01-test.md
js/: mermaid.js
post/: day-0.md  function-coloring-is-inevitable.md  hackable-software.md  test.md  the-history-of-simple-software.md
post/human-inventions-and-discoveries/: index.html  index.js  index.ts
posts/: 1970-01-01-test.md  2022-02-03-day-0.md
src/: Site.hs  highlight.ts  index.ts  posts-meta.ts
template/: about.md  index.html  post-item.html  post.html  tag.html  tags.html
templates/: default.html  draft.html  drafts.html  home.html  post-list.html  post.html  posts.html  tag.html  tags.html
