name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          src/Site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.15.*
                  , blaze-html == 0.9.*
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
